syntax = "proto3";

package grpc.v1beta1;
option csharp_namespace = "Grpc.V1Beta1";
option go_package = "grpcv1beta1";
option java_multiple_files = true;
option java_outer_classname = "ProductApiProto";
option java_package = "com.grpc.v1beta1";
option objc_class_prefix = "GXX";
option php_namespace = "Grpc\\V1Beta1";

import "google/api/annotations.proto";
import "grpc/v1beta1/product.proto";

// ProductAPI export products listings endpoints.
service ProductAPI {
  // ListProduct.
  // This enables the following two alternative HTTP JSON to RPC mappings:
  //
  // HTTP | gRPC
  // -----|-----
  // `GET /v1/cataloging/products` | `ListProducts()`
  // `GET /v1/users/me/products` | `ListProducts(user_id: "me")
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {
    option (google.api.http) = {
      get : "/v1/cataloging/products"
      additional_bindings : {get : "/v1/users/{user_id}/products"}
    };
  }
}

message ListProductsRequest {
  string user_id = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListProductsResponse {
  repeated grpc.v1beta1.Product products = 1;
  string next_page_token = 2;
}
